# ai-radar

./: .env.example  .gitignore  README.md  app.py  authorize_drive.py  config.yaml  db.py  evaluator.py  fetcher.py  main.py  pyproject.toml  radar.db  reporter.py  requirements.txt  resources.yaml
deploy/: vps_setup.sh
prompts/: preferences.md  rubric.md
study-notes/: about-db.md  evaluator.md  fetcher.md  speed-redesign.md
